# opengl-light-lab

./: .pre-commit-config.yaml  .tool-versions  README.md  pyproject.toml
opengl_light_lab/: __init__.py  __main__.py  app_state.py  control_panel.py  gl_widget.py  input_handler.py  main_window.py  materials.py  primitives.py  textures.py
textures/: README.txt
